<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kennai</string>
    <string name="action_settings">Settings</string>
    <string name="center_point">Change Center Point</string>
    <string name="add_remove_point">Add/Remove Point</string>
    <string name="map_prompt">Choose Map Type: </string>
    <string name="smiley_mode">Smiley Mode: </string>
    <string name="circle_radius">Radius: </string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_center_address">Enter Center Address</string>
    <string name="add_item">Add Item</string>
    <string name="change">Change</string>
    <string name="use_current_loc">Use Current Location</string>
    <string name="reset_map">Reset Map</string>
	<string name="smile">Smile!</string>
    <string name="map_type_changed">Map Type Changed!</string>
    <string name="radius_change">Radius Changed!</string>
    <string name="radius_greater_than_zero">Radius must be &gt; 0</string>
    <string name="radius_too_large">radius must be &lt; 4000km</string>
    <string name="are_you_sure_reset">Are you sure you want to reset the map?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="add_point">Add Point</string>
    <string name="delete">Delete</string>
    <string name="do_you_want_to_delete">Are you sure you want to delete this point?</string>
	<string name="point_already_in_list">Point already in list</string>
	<string name="point_added">Point added!</string>
	<string name="address_not_found">Address not found</string>
	<string name="center_point_changed">Center point changed!</string>
	<string name="center">Center</string>
	<string name="current_loc">Current Loc</string>
	<string name="dist_to_center">Dist to center:</string>

    <string-array name="map_type_array">
        <item>Normal</item>
        <item>Satellite</item>
        <item>Terrain</item>
        <item>Hybrid</item>
    </string-array>

</resources>