<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp" >
    
    
    <Button
        android:id="@+id/center_point"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/center_point"
        android:textAppearance="?android:attr/textAppearanceMedium"  />
    
    <Button
        android:id="@+id/add_point"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/center_point"
        android:text="@string/add_remove_point"
        android:textAppearance="?android:attr/textAppearanceMedium"  />

    <TextView
        android:id="@+id/choose_map_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_prompt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@id/add_point"
        android:layout_alignBottom="@+id/map_type_spinner"
        android:layout_marginTop="34dp" />

    <Spinner
        android:id="@id/map_type_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/choose_map_type"
        android:layout_below="@id/add_point"
        android:entries="@array/map_type_array"
        android:prompt="@string/map_prompt"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="30dp" />

    <CheckedTextView
        android:id="@+id/smiley_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_map_type"
        android:layout_marginTop="10dp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:clickable="true"
        android:text="@string/smiley_mode"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    

    <EditText
        android:id="@+id/circle_size_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/circle_size_button"
        android:layout_toLeftOf="@id/circle_size_button"
        android:layout_toRightOf="@+id/circle_size_text"
        android:layout_below="@id/smiley_mode"
        android:layout_marginTop="10dp"
        android:ems="10" 
        android:inputType="numberDecimal" />
    
    <TextView
        android:id="@id/circle_size_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/smiley_mode"
        android:layout_alignParentLeft="true"
        android:text="@string/circle_radius"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="14dp" />

    <Button
        android:id="@id/circle_size_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/smiley_mode"
        android:text="@string/change"
        android:layout_alignParentRight="true" />
    
     <Button
        android:id="@+id/reset_map"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_map"
        android:textAppearance="?android:attr/textAppearanceMedium"  />

</RelativeLayout>