<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp" >

    

    <EditText
        android:id="@+id/search_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/search_button"
        android:layout_toLeftOf="@id/search_button"
        android:ems="10"
        android:hint= "@string/enter_center_address" />

    <Button
        android:id="@id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/change" />
    
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_location" >
    </ListView>

    <Button
        android:id="@id/current_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/search_button"
        android:layout_below="@id/search_button"
        android:text="@string/use_current_loc" />

</RelativeLayout>